--- a/project/board/static/board/css/post_detail.css
+++ b/project/board/static/board/css/post_detail.css
@@ -55,7 +55,7 @@
   padding-bottom: 10px;
 }
 
-.detail__post__header > a{
+.detail__post__header > a {
   text-decoration: none;
   color: #4fbcbd;
   font-size: 20px;
@@ -86,8 +86,8 @@
   justify-content: space-between;
 }
 
-#post__bookmark {
-  width: 20px;
+.post__bookmark {
+  width: 18px;
 }
 
 #post__message {
@@ -175,6 +175,12 @@
 
 
 /* comment */
+.comment__form__row{
+  display: flex;
+  flex-direction: column;
+  padding: 20px 50px;
+}
+
 .comment__row {
   display: flex;
   flex-direction: column;
@@ -185,6 +191,65 @@
 
 .nested_comment__row {
   padding-left: 100px;
+}
+
+.comment__form {
+  display: flex;
+  flex-direction: column;
+  /*width: 100%;*/
+}
+
+.comment__form__top {
+  width: 100%;
+  margin-bottom: 5px;
+}
+
+.comment__form__top > textarea {
+  width: 100%;
+  height: 100px;
+  border: 1px solid #e3e3e3;
+  padding: 10px;
+  resize: none;
+  overflow-y: auto;
+  font-family: YDIYGO320;
+}
+
+.comment__form__bottom {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.comment__checkbox__wrapper {
+  display: flex;
+  align-items: center;
+  font-family: YDIYGO320;
+}
+
+.comment__checkbox {
+  display: none;
+}
+
+.comment__checkbox + label {
+  margin-left: 5px;
+  border: 1px solid #4fbcbd;
+  height: 16px;
+  width: 16px;
+  display: inline-block;
+  padding: 0;
+  cursor: pointer;
+}
+
+.comment__checkbox:checked + label {
+  background-color: #4fbcbd;
+}
+
+.comment__write {
+  border: 1px solid #e3e3e3;
+  border-radius: 6px;
+  padding: 5px 15px;
+  margin-left: 10px;
+  color: #cecece;
 }
 
 .comment__top {
@@ -249,5 +314,5 @@
 .comment__bottom {
   font-family: YDIYGO320;
   margin-top: 10px;
-  word-break: break-word  ;
+  word-break: break-word;
 }
