--- a/project/chat/static/chat/css/mobile_chat.css
+++ b/project/chat/static/chat/css/mobile_chat.css
@@ -1,9 +1,18 @@
-.mobile_chat {
+.pc_chat {
     display:none!important;
 }
 
+.pc__header {
+    display:none!important;
+}
+
+
+.container {
+    padding: 0!important;
+}
+
 html {
-    height: calc(100% - 3rem);
+    height: 100%;
 }
 
 body{
@@ -18,16 +27,17 @@ hr{
     display : flex;
     flex-direction: row;
     justify-content: space-between;
-    height: calc(100% - 2rem);
+    height: 100%;
 }
 #chat-container > div{
     margin: 0px 10px;
 }
 
-#chat-list-container{
+#chat-list-container_m{
+    display: block;
     background-color: #ffffff;
     border-radius: 12px 12px 0 0;
-    width : 40%;
+    width : 100%;
     justify-content: center;
 }
 
@@ -35,8 +45,12 @@ hr{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 2rem;
+    height: 3rem;
+    background-color:#4fbcbd;
+    color: white;
+    font-size: 1.4rem;
 }
+
 #chat-search{
     background-color: #f5f6f7;
     width: 95%;
@@ -95,20 +109,30 @@ hr{
 }
 
 
-#chat-main{
+#chat-main_m{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    border-radius: 12px 12px 0 0;
     background-color: #ffffff!important;
-    width: 59%;
+    width: 100%;
 }
 #chat-header {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    height: 2rem;
+    height: 3rem;
+    background-color:#4fbcbd;
+    color: white;
+    font-size: 1.4rem;
 }
+
+#chat-header img {
+}
+
+#hide {
+    fill: transparent;
+}
+
 #chat-box{
     overflow: scroll;
     overflow-x: hidden;
@@ -130,7 +154,7 @@ hr{
     width: 80%;
 }
 #chat-text{
-    width: 92%;
+    width: 90%;
     border: none;
     height: 100%;
     padding-left: 1rem;
@@ -146,7 +170,7 @@ hr{
 #chat-input {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     height: 2rem;
     margin-bottom: 5px;
     margin-top: 5px;
