--- a/project/chat/templates/chat/index.html
+++ b/project/chat/templates/chat/index.html
@@ -2,10 +2,12 @@
 {% load static %}
 
 {% block css %}
-<link rel="stylesheet" href="{% static "chat/css/index.css" %}" type="text/css">
+<link rel="stylesheet" media="(min-width:768px)" href="{% static "chat/css/index.css" %}" type="text/css">
+<link rel="stylesheet " media="(max-width:768px)" href="{% static "chat/css/mobile_chat.css" %}" type="text/css">
+
 {% endblock %}
 {% block contents %}
-<div class="container chat-container">
+<div class="container chat-container pc_chat">
     <div id="chat-list-container">
         <div id="chat-list-header">
             Messenger
@@ -32,6 +34,37 @@
         </div>
     </div>
 </div>
+
+<div class="container chat-container mobile_chat">
+        <div id="chat-list-container_m" style="display: none;">
+            <div id="chat-list-header">
+                Messenger
+            </div>
+            <hr width=100%>
+            <input id="chat-search" type="text" placeholder="Search Messenger">
+            <ul id='chat-list'>
+            </ul>
+        </div>
+        <div id="chat-main_m">
+            <div id='chat-header'>
+                <img src="{% static "/svg/share.svg" %}" alt="" id="chat_back">
+                none
+                <img src="{% static "/svg/share.svg" %}" alt="" id="hide">
+            </div>
+            <hr width=100%>
+            <ul id='chat-box' url='none' with='none'>
+    
+            </ul>
+            <hr width=100%>
+            <div id="chat-input">
+                <input type="text" id="chat-text" placeholder="Please enter a message">
+                <button type="submit" id="chat-text-btn">
+                    <img src="{% static "/svg/send message.svg"%}" alt="">
+                </button>
+            </div>
+        </div>
+    </div>
+
 {% endblock contents %}
 
 {% block javascript %}
@@ -43,6 +76,18 @@
     const chat_search = document.getElementById('chat-search')
     const chat_text_btn = document.getElementById('chat-text-btn')
     let flag = 'norm'
+
+    document.getElementById('chat_back').onclick = () => {
+        var chat_a = document.getElementById('chat-list-container_m');
+        var chat_m = document.getElementById('chat-main_m');
+        console.log(chat_a);
+        if (chat_a.style.display == 'none'){
+            chat_a.style.display = 'block';
+            chat_m.style.display = 'none';
+            console.log("hello");
+
+        }
+    };
 
 
     sb.connect("{{ user.username }}", async function (user, error) {
