chat header까지 이식 완료

--- a/project/chat/static/chat/css/index.css
+++ b/project/chat/static/chat/css/index.css
@@ -227,7 +227,7 @@ hr{
     background-color: rgba(0, 0, 0, 0);
 }
 #chat-box::-webkit-scrollbar-thumb {
-    background-color: #383838;
+    background-color: #f5f6f7;
     height: 200px;
 }
 #chat-box::-webkit-scrollbar-button {
