--- a/project/board/templates/board/main_board.html
+++ b/project/board/templates/board/main_board.html
@@ -1,34 +1,7 @@
-{% extends 'base.html' %}
+{% extends 'login_base.html' %}
 {% load static %}
 {% load humanize %}
 
-{% block header%}
-    <link rel="stylesheet" media="(min-width:768px)" href="{% static "board/css/board_header/board_header_small.css" %}" type="text/css">
-    <link rel="stylesheet" media="(min-width:992px)" href="{% static "board/css/board_header/board_header_medium.css" %}" type="text/css">
-    <link rel="stylesheet" media="(min-width:1200px)" href="{% static "board/css/board_header/board_header_large.css" %}" type="text/css">
-    
-    <div class="board__header__search pc__header">
-        <form action="" method="get">
-            <button type="submit" value="term">
-                <img src="{% static "/svg/search.svg" %}">
-            </button>
-            <input type="hidden" name="state" value="{{ state }}">
-            <input type="text" placeholder="Search mycampus" name="term" value="{{ search }}">
-        </form>
-    </div>
-    <div class="board__header__right pc__header">
-        <ul class="board__buttons">
-            <li><img src="{% static "/svg/alarm.svg" %}"></li>
-            <li><img src="{% static "/svg/messege box.svg" %}"></li>
-            <li><img src="{% static "/svg/mypage.svg" %}"></li>
-            <a href="{% url 'core:board:post_create' univ.url_name %}">
-                <li><img id="h__post" src="{% static "/svg/post.svg" %}"></li>
-            </a>
-        </ul>
-    </div>
-
-
-{% endblock %}
 
 {% block css %}
     <link rel="stylesheet" media="(max-width:768px)" href="{% static "board/css/board_header/board_header_mobile.css" %}" type="text/css">
@@ -78,12 +51,6 @@
             </form>
         </div>
     </div>
-
-    {% comment %} <div class="board__header__search mobile__header">
-
-    </div> {% endcomment %}
-
-
 
 
     <div class="board__pannel__top container pc__board">
