--- a/project/board/templates/board/post_new.html
+++ b/project/board/templates/board/post_new.html
@@ -1,17 +1,62 @@
 {% extends 'base.html' %}
 
-{% block contents %}
 {% load static %}
-<link rel="stylesheet" href="{% static "board/css/new_post.css" %}" type="text/css">
 
-<div class="container new__post__container">
-    <div class="new__post__main">
-    <form action="" method="post" enctype="multipart/form-data">
-      {% csrf_token %}
-      {{ form.as_p }}
-      <input type="file" accept="image/*" name="images" multiple>
-      <input type="submit">
-    </form>
+{% block css %}
+  <link rel="stylesheet" href="{% static "board/css/post_new.css" %}" type="text/css">
+{% endblock %}
+
+{% block contents %}
+  <div class="container">
+    <div class="new__post__container">
+      <div class="new__post__main">
+        <div class="post__form__top">
+          <a href="{% url 'core:board:main_board' url_name %}">
+            <img src="{% static 'svg/cancel.svg' %}" alt="">
+          </a>
+        </div>
+        <form action="" method="post" enctype="multipart/form-data" class="post__form">
+          {% csrf_token %}
+          <div class="form__category">
+            <img src="{% static 'svg/category.svg' %}" alt="">
+            {{ form.ctgy }}
+          </div>
+          {{ form.title }}
+          {{ form.content }}
+          <div class="post__form__bottom">
+            <div class="form__bottom__left">
+              <div onclick="photoClick()">
+                <img src="{% static 'svg/photo.svg' %}">
+              </div>
+              <input type="file" accept="image/*" name="images" multiple id="image_field">
+            </div>
+            <div class="form__bottom__right">
+              <div class="post__checkbox__wrapper">
+                {{ form.is_anonymous }}
+                <label for="id_is_anonymous"></label>
+                anon
+              </div>
+              <button type="submit" class="reset-button">
+                <img src="{% static 'svg/send message.svg' %}" alt="">
+              </button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
   </div>
-</div>
+{% endblock %}
+
+{% block javascript %}
+  <script>
+    $("input[type='image']").click(function () {
+      $("input[id='my_file']").click();
+    });
+
+    function photoClick() {
+      document.querySelector('#image_field').click();
+    }
+
+  </script>
+
 {% endblock %}
